--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,10 @@
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
+      <ion-nav-buttons side="secondary">
+        <button class="button button-icon icon ion-ios-plus-empty">
+        </button>
+      </ion-nav-buttons>
     </ion-nav-bar>
     <!--
       The views will be rendered in the <ion-nav-view> directive below
