--- a/www/index.html
+++ b/www/index.html
@@ -12,11 +12,19 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <!-- jQuery -->
+    <script src="lib/jquery/jquery-1.11.3.min.js"></script>
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- Moment.js -->
     <script src="lib/moment/moment.js"></script>
+
+    <!-- AngularUI Calendar -->
+    <link href="lib/fullcalendar-2.3.1/fullcalendar.min.css" rel="stylesheet">
+    <script src="lib/fullcalendar-2.3.1/fullcalendar.min.js"></script>
+    <script src="lib/ui-calendar/calendar.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
