--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,13 @@
     <script src="lib/fullcalendar-2.3.1/fullcalendar.min.js"></script>
     <script src="lib/ui-calendar/calendar.js"></script>
 
+    <!-- Color Picker -->
+    <link href="lib/spectrum/css/spectrum.css" rel="stylesheet">
+    <script src="lib/spectrum/js/spectrum.js"></script>
+
+    <!-- Auto Validator -->
+    <script src="lib/angular-auto-validate/jcs-auto-validate.min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
